2014-01-23  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/fpu_control.h: New file.
	* sysdeps/sh/sh4/fpu/fpu_control.h: Remove.
	* sysdeps/unix/sysv/linux/sh/sys/ucontext.h: New file.
	* sysdeps/unix/sysv/linux/sh/sh3/sys/ucontext.h: Remove.
	* sysdeps/unix/sysv/linux/sh/sh3/sys: Remove directory.
	* sysdeps/unix/sysv/linux/sh/sh4/sys/ucontext.h: Remove.
	* sysdeps/unix/sysv/linux/sh/sh4/sys: Remove directory.
	* sysdeps/sh/sys/ucontext.h: Remove.
	* sysdeps/sh/sys: Remove directory.

2014-01-22  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/unix/sysv/linux/s390/s390-32/sys/ucontext.h: Merge into
	s390/sys/ucontext.h.
	* sysdeps/unix/sysv/linux/s390/s390-64/sys/ucontext.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/sys/ucontext.h: New file.

2014-01-20  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #15605]
	* sysdeps/x86_64/x32/symbol-hacks.h: Include generic symbol-hacks.h.

2014-01-20  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ#16431]
	* sysdeps/unix/sysv/linux/powerpc/gettimeofday.c (__gettimeofday):
	Adjust the vDSO correctly for internal calls.
	* sysdeps/unix/sysv/linux/powerpc/time.c (time): Likewise.

2014-01-20  Allan McRae  <allan@archlinux.org>

	* po/ca.po: Update Catalan translation from translation project.

2014-01-16  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/s390/sotruss-lib.c: New file.

2014-01-16  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ#16430]
	* sysdeps/unix/sysv/linux/powerpc/gettimeofday.c
	(__GI___gettimeofday): Alias for a different internal symbol to avoid
	local calls issues by not having a PLT stub required for IFUNC calls.
	* sysdeps/unix/sysv/linux/powerpc/time.c (__GI_time): Likewise.

2014-01-16 Joseph Myers  <joseph@codesourcery.com>

	* math/test-fpucw-ieee.c: Use <> in #include of test-fpucw.c.
	* math/test-fpucw-static.c: Likewise.

2013-01-16  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #16453]
	* nscd/netgroupcache.c (addgetnetgrentX): Don't use alloca.
