@@ -137,7 +137,7 @@ do_test (void)
   return 0;
 }
 
-#define TIMEOUT 4
+#define TIMEOUT 8
 
 #define TEST_FUNCTION do_test ()
 #include "../test-skeleton.c"
